<resources>
    <string name="app_name">Android Project Kakhanouski</string>
    <string name="worldHelloTextView">World Hello</string>
    <string name="helloWorldTextView">Hello World</string>
    <string name="inversion_text">Inversion</string>
    <string name="dz0">ДЗ№0</string>
    <string name="dz1">ДЗ№1</string>
    <string name="todo">TODO</string>
    <string name="dzmitry_kakhanouski">Dzmitry Kakhanouski</string>
    <string name="trophies">Trophies</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="trophies_value">4</string>
    <string name="following_value">54</string>
    <string name="followers_value">12</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="postal_code">Postal Code</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="phone">Phone</string>
    <string name="name_parametr">Nial Brockman</string>
    <string name="country_parametr">Республика Беларусь Республика Беларусь</string>
    <string name="postal_code_parametr">220018</string>
    <string name="date_of_birth_parametr">Feb. 21, 1995</string>
    <string name="gender_parametr">Male</string>
    <string name="height_parametr">185 cm</string>
    <string name="phone_parametr">(29) 555-55-55</string>
    <string name="dz3_activity">ДЗ№3</string>
    <string name="dz2_activity">ДЗ№2</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="dz2_forgot"><u>Forgot your username/password?</u></string>
    <string name="dz_2_create_account">Create Account</string>
    <string name="url_adress_hint">Введите URL-адрес</string>
    <string name="load_image_button">Загрузить картинку</string>
    <string name="dz4_activity">ДЗ№4</string>
    <string name="dz6_save_button">Save</string>
    <string name="dz6_delete_button">Delete</string>
    <string name="edit_button">Edit</string>
    <string name="dz6_hint_search">Введите имя для поиска</string>
    <string name="dz6_url_photo">Введите URL-адрес фото</string>
    <string name="dz6_enter_name">Введите имя</string>
    <string name="dz6_enter_age">Введите возраст</string>
    <string name="dz6_error_cannot_be_blank">Поле обязательно для заполнения</string>
    <string name="dz6_error_url_is_invalid">Не правильный URL-адрес</string>
    <string name="dz5_activity">ДЗ№5</string>
    <string name="dz6_activity">ДЗ№6</string>
    <string name="dz6_error_id">Не правильный ID</string>
    <string name="dz5_activity">ДЗ№5</string>
    <string name="dz6_activity">ДЗ№6</string>
    <string name="dz6_save_button">Save</string>
    <string name="dz6_delete_button">Delete</string>
    <string name="edit_button">Edit</string>
    <string name="dz6_hint_search">Введите имя для поиска</string>
    <string name="dz6_url_photo">Введите URL-адрес фото</string>
    <string name="dz6_enter_name">Введите имя</string>
    <string name="dz6_enter_age">Введите возраст</string>
    <string name="dz6_error_cannot_be_blank">Поле обязательно для заполнения</string>
    <string name="dz6_error_url_is_invalid">Не правильный URL-адрес</string>
</resources>
