<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
    <RelativeLayout
            android:orientation="horizontal"
            android:background="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:id="@+id/bellImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_notifications_black_24dp"
                android:tint="@android:color/white"
        />
        <LinearLayout
                android:id="@+id/avatarLinearLayout"
                android:layout_below="@+id/bellImageView"
                android:layout_marginTop="25dp"
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/loadAvatarImageView"
                    android:background="@drawable/border_shape"
                    android:padding="@dimen/border_avatar_width"
                    android:layout_width="@dimen/diam_avatar"
                    android:layout_height="@dimen/diam_avatar"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:layout_marginStart="15dp"
                    android:textSize="20sp"
                    android:text="@string/dzmitry_kakhanouski"
                    android:textColor="@color/profileDataTextView"
            />

        </LinearLayout>

        <LinearLayout
                android:id="@+id/fieldsTextLinearLayout"
                android:layout_below="@+id/avatarLinearLayout"
                android:layout_marginTop="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/fieldOneTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trophies"
                    android:textAllCaps="true"
                    android:textColor="@color/fieldsTextView"
            />
            <TextView
                    android:id="@+id/fieldTwoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:layout_marginStart="50dp"
                    android:textAllCaps="true"
                    android:textColor="@color/fieldsTextView"
            />
            <TextView
                    android:id="@+id/fieldThreeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:layout_marginStart="50dp"
                    android:textAllCaps="true"
                    android:textColor="@color/fieldsTextView"
            />

        </LinearLayout>

        <LinearLayout
                android:id="@+id/infFieldsTextLinearLayout"
                android:layout_below="@+id/fieldsTextLinearLayout"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/infFieldOneTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trophies_value"
                    android:textColor="@color/infFieldsTextView"
            />
            <TextView
                    android:id="@+id/infFieldTwoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following_value"
                    android:layout_marginStart="115dp"
                    android:textColor="@color/infFieldsTextView"
            />
            <TextView
                    android:id="@+id/infFieldThreeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers_value"
                    android:layout_marginStart="115dp"
                    android:textColor="@color/infFieldsTextView"
            />

        </LinearLayout>
        <View
                android:id="@+id/lineView"
                android:layout_below="@id/infFieldsTextLinearLayout"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@color/fieldsTextView"
        />

        <RelativeLayout
                android:id="@+id/infDataRelativeLayout"
                android:layout_below="@+id/lineView"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/oneDataTextView"
                    android:text="@string/name"
                    style="@style/DataTextView"
            />
            <TextView
                    android:id="@+id/twoDataTextView"
                    android:layout_below="@id/oneDataTextView"
                    android:text="@string/country"
                    style="@style/DataTextView"
            />
            <TextView
                    android:id="@+id/threeDataTextView"
                    android:layout_below="@id/twoDataTextView"
                    android:text="@string/postal_code"
                    style="@style/DataTextView"
            />
            <TextView
                    android:id="@+id/fourDataTextView"
                    android:layout_below="@id/threeDataTextView"
                    android:text="@string/date_of_birth"
                    style="@style/DataTextView"
            />
            <TextView
                    android:id="@+id/fiveDataTextView"
                    android:layout_below="@id/fourDataTextView"
                    android:text="@string/gender"
                    style="@style/DataTextView"
            />
            <TextView
                    android:id="@+id/sixDataTextView"
                    android:layout_below="@id/fiveDataTextView"
                    android:text="@string/height"
                    style="@style/DataTextView"
            />
            <TextView
                    android:id="@+id/sevenDataTextView"
                    android:layout_width="wrap_content"
                    android:layout_below="@id/sixDataTextView"
                    android:text="@string/phone"
                    style="@style/DataTextView"
            />
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/infRelativeLayout"
                android:layout_below="@+id/lineView"
                android:layout_toEndOf="@+id/infDataRelativeLayout"
                android:layout_marginTop="5dp"
                android:layout_marginStart="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/oneInfTextView"
                    android:text="@string/name_parametr"
                    style="@style/InfTextView"
            />
            <TextView
                    android:id="@+id/twoInfTextView"
                    android:layout_below="@id/oneInfTextView"
                    android:text="@string/country_parametr"
                    style="@style/InfTextView"
            />
            <TextView
                    android:id="@+id/threeInfTextView"
                    android:layout_below="@id/twoInfTextView"
                    android:text="@string/postal_code_parametr"
                    style="@style/InfTextView"
            />
            <TextView
                    android:id="@+id/fourInfTextView"
                    android:layout_below="@id/threeInfTextView"
                    android:text="@string/date_of_birth_parametr"
                    style="@style/InfTextView"
            />
            <TextView
                    android:id="@+id/fiveInfTextView"
                    android:layout_below="@id/fourInfTextView"
                    android:text="@string/gender_parametr"
                    style="@style/InfTextView"
            />
            <TextView
                    android:id="@+id/sixInfTextView"
                    android:layout_below="@id/fiveInfTextView"
                    android:text="@string/height_parametr"
                    style="@style/InfTextView"
            />
            <TextView
                    android:id="@+id/sevenInfTextView"
                    android:layout_width="wrap_content"
                    android:layout_below="@id/sixInfTextView"
                    android:text="@string/phone_parametr"
                    style="@style/InfTextView"
            />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>