<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDz6">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundDz6"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dz8UrlLinearLayout"
            style="@style/Dz6LinearLayoutStudentEdit"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dz8UrlEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/dz6_url_photo"
                android:imeOptions="actionNext"
                android:inputType="textUri" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dz8NameLinearLayout"
            style="@style/Dz6LinearLayoutStudentEdit">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dz8NameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/dz6_enter_name"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dz8AgeLinearLayout"
            style="@style/Dz6LinearLayoutStudentEdit">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dz8AgeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/dz6_enter_age"
                android:imeOptions="actionDone"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/dz12ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:indeterminate="true"
            android:indeterminateTint="@color/progressBar"
            android:indeterminateTintMode="src_over"
            android:visibility="visible" />

        <Button
            android:id="@+id/dz8SaveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@color/dz6BackgroundButton"
            android:paddingStart="35dp"
            android:paddingEnd="35dp"
            android:text="@string/dz6_save_button"
            android:textSize="22sp" />

    </LinearLayout>
</ScrollView>